Version 0.9.35
    Bug Fixes:
        * #1209 - Stuck incremental achievements due to lost precision (via PR #1258).
    New Features:
        * #1134 - No API for setting OAuth scopes (via PR #1296)
Version 0.9.34
    Bug Fixes:
        * #1162 - Cannot build from source
        * #1179 - Interfaces should not be under `#if`
        * #1175 - Play-services version needs to be updated to 9.0.0
        * #1180 - PlayGamesUserProfile.Equals(object obj)` implemented incorrectly
    New Features:
        * #1085 - Add SpendProbability player stat.
Version 0.9.33
    Bug Fixes:
        * #1032 - Not able to get user's email.
        * #1040 - Cannot parse PBX project for iOS
        * #1068 - CreateWithInvitationScreen callback called twice on cancel.
        * #1082 - Changed postbuild order to avoid Invalid PBX project.
        * #1088 - Disable BITCODE for iOS build
        * #1105 - GetServerAuthCode callback should be on game thread.
                    (also moved other callbacks to be on game thread).
        * Improved jar resolver logic during setup.
    New Features:
        * #990 - Support callback for getting email address.
        * Removed dependency on Google+.
Version 0.9.32
    Bug Fixes:
        * #989 - Fixed misleading messages about RTMP when authenticating.
        * #999 - Fixed BuildTarget.iOS reference when using Unity 4.x.
        * #1004 - Upgrading from older version of plugin did not remove unused files.
        * #1010 - Updated documentation about which Android SDK components
            are needed.
        * Updated dependency pattern for android-support-v4 to be 23.1+.
    New Features:
        * Play-services-jar resolver update to 1.1.1.
            See https://github.com/googlesamples/unity-jar-resolver/blob/master/CHANGELOG.md
            for details on the changes.
        * Added plugin version to manifest.
Version 0.9.31a
    Bug Fixes:
        * #977 - IsConnectedToRoom always returned false, causing local player