@@ -18,17 +18,21 @@ using UnityEngine;
 using System.Collections;
 using UnityEngine.SocialPlatforms;
 
-public class MainGui : MonoBehaviour {
+public class MainGui : MonoBehaviour
+{
     private const float FontSizeMult = 0.05f;
     private bool mWaitingForAuth = false;
     private string mStatusText = "Ready.";
+    private bool dumpedToken = false;
 
-    void Start () {
+    void Start()
+    {
         // Select the Google Play Games platform as our social platform implementation
         GooglePlayGames.PlayGamesPlatform.Activate();
     }
 
-    void OnGUI() {
+    void OnGUI()
+    {
         GUI.skin.button.fontSize = (int)(FontSizeMult * Screen.height);
         GUI.skin.label.fontSize = (int)(FontSizeMult * Screen.height);
 
@@ -37,50 +41,67 @@ public class MainGui : MonoBehaviour {
 
         Rect buttonRect = new Rect(0.25f * Screen.width, 0.10f * Screen.height,
                           0.5f * Screen.width, 0.25f * Screen.height);
-        Rect imageRect = new Rect(buttonRect.x+buttonRect.width/4f,
+        Rect imageRect = new Rect(buttonRect.x + buttonRect.width / 4f,
                                   buttonRect.y + buttonRect.height * 1.1f,
-                                  buttonRect.width/2f, buttonRect.width/2f);
+                                  buttonRect.width / 2f, buttonRect.width / 2f);
 
-        if (mWaitingForAuth) {
+        if (mWaitingForAuth)
+        {
             return;
         }
 
         string buttonLabel;
 
 
-        if (Social.localUser.authenticated) {
-          buttonLabel = "Sign Out";
-          if (Social.localUser.image != null) {
-            GUI.DrawTexture(imageRect, Social.localUser.image,
-                            ScaleMode.ScaleToFit);
-          } else {
-            GUI.Label(imageRect, "No image available");
-          }
+        if (Social.localUser.authenticated)
+        {
+            buttonLabel = "Sign Out";
+            if (Social.localUser.image != null)
+            {
+                GUI.DrawTexture(imageRect, Social.localUser.image,
+                                ScaleMode.ScaleToFit);
+            }
+            else {
+                GUI.Label(imageRect, "No image available");
+            }
 
-          mStatusText = "Ready";
-        } else {
-          buttonLabel = "Authenticate";
+            mStatusText = "Ready";
+
+            if (!dumpedToken)
+            {
+                string token = GooglePlayGames.PlayGamesPlatform.Instance.GetToken();
+
+                Debug.Log("AccessToken = " + token);
+                dumpedToken = token != null && token.Length > 0;
+            }
+        }
+        else {
+            buttonLabel = "Authenticate";
         }
 
-        if (GUI.Button(buttonRect, buttonLabel)) {
-            if (!Social.localUser.authenticated) {
+        if (GUI.Button(buttonRect, buttonLabel))
+        {
+            if (!Social.localUser.authenticated)
+            {
                 // Authenticate
                 mWaitingForAuth = true;
                 mStatusText = "Authenticating...";
-                Social.localUser.Authenticate((bool success) => {
+                Social.localUser.Authenticate((bool success) =>
+                {
                     mWaitingForAuth = false;
-                    if (success) {
-                      mStatusText = "Welcome " + Social.localUser.userName;
-                      string token = GooglePlayGames.PlayGamesPlatform.Instance.GetToken();
-                      Debug.Log(token);
-                    } else {
-                      mStatusText = "Authentication failed.";
+                    if (success)
+                    {
+                        mStatusText = "Welcome " + Social.localUser.userName;
+                    }
+                    else {
+                        mStatusText = "Authentication failed.";
                     }
                 });
-            } else {
+            }
+            else {
                 // Sign out!
                 mStatusText = "Signing out.";
-                ((GooglePlayGames.PlayGamesPlatform) Social.Active).SignOut();
+                ((GooglePlayGames.PlayGamesPlatform)Social.Active).SignOut();
             }
         }
     }
